Fix alignment of calendar icon

--- a/client/resources/stylesheets/form.css
+++ b/client/resources/stylesheets/form.css
@@ -77,6 +77,10 @@ input {
 	cursor: not-allowed;
 }
 
+.button jd-icon {
+	vertical-align: middle;
+}
+
 .password-input {
 	position: relative;
 }
